[package]
name = "shareit"
version = "0.1.1"
edition = "2018"
authors = ["Artemis <me@arty.li>"]
description = "A link shortener, file uploader and paste bin."
license = "MIT"
readme = "README.md"
repository = "https://github.com/pls-shareit/shareit"

[dependencies]
diesel = { version = "1.4.7", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
rocket = "0.4.10"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.0.1"
rand = "0.8.4"
unicode_reader = "1.0.1"
url = { version = "2.2.2", features = ["serde"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_postgres_pool", "serve"]

[dependencies.byte-unit]
version = "4.0.12"
default-features = false
features = ["serde"]
